feat: added gtag

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="again" />
-
     <title>Again</title>
     <link href="styles.css" rel="stylesheet" />
     <link href="fg.css" rel="stylesheet" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-02JR3DCGXX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-02JR3DCGXX");
+    </script>
   </head>
   <body>
     <article class="bg">
